fix: CLIN-2443 added missing i18n

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -509,6 +509,18 @@
       "actions": {
         "download": "Download documents"
       }
+    },
+    "parent": {
+      "info": {
+        "moment": {
+          "justify": {
+            "never": "Ex: Death, adoption...",
+            "later": "Ex: Travel..."
+          },
+          "mother": "Enter information about the mother",
+          "father": "Enter information about the father"
+        }
+      }
     }
   }
 }
