--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -509,6 +509,18 @@
       "actions": {
         "download": "Télécharger les documents"
       }
+    },
+    "parent": {
+      "info": {
+        "moment": {
+          "justify": {
+            "never": "Ex: Décès, adoption...",
+            "later": "Ex: En voyage..."
+          },
+          "mother": "Saisir les informations sur la mère",
+          "father": "Saisir les informations sur le père"
+        }
+      }
     }
   }
 }
